Add subbosses to set of tables from which deleted nodes must be purged.

--- a/db/EmulabConstants.pm.in
+++ b/db/EmulabConstants.pm.in
@@ -605,8 +605,9 @@ sub TBDB_PHYSICAL_NODE_TABLES() {
 	'node_startloc'		=> [ 'node_id' ],
 	'node_history'		=> [ 'node_id' ],
 	'node_bootlogs'		=> [ 'node_id' ],
-        'plab_mapping'          => [ 'node_id' ],
-        'node_utilization'      => [ 'node_id' ],
+	'plab_mapping'          => [ 'node_id' ],
+	'node_utilization'      => [ 'node_id' ],
+	'subbosses'		=> [ 'node_id' ],
     );
 }
 
