--- a/db/subboss_dhcpd_makeconf.in
+++ b/db/subboss_dhcpd_makeconf.in
@@ -162,6 +162,7 @@ sub gendhcpdconf($$)
 			    my $filename = $$row{"FILENAME"};
 			    my $singlenet = $$row{"SINGLENET"};
 			    my $inner_elab_boot = $$row{"INNER_ELAB_BOOT"};
+			    my $inner_elab_role = $$row{"INNER_ELAB_ROLE"};
 			    my $plab_boot = $$row{"PLAB_BOOT"};
 			    my $booting;
 			    my $dns;
@@ -200,7 +201,7 @@ sub gendhcpdconf($$)
 			    }
 
 			    if ($inner_elab_boot) {
-				if ($singlenet) {
+				if ($singlenet && $inner_elab_role eq 'node') {
 					$booting  = "${spaces}\tignore booting;\n";
 				} else {
 					$dns = "${spaces}\toption ".
