Initial client code and rules for Linux firewalls
Made the following changes to the clientside code to support Linux
firewalls:

- Made os_fwconfig_line() actually do something.
- getfwconfig() adds an 'IPS' hash to the fwinfo hash.  This contains
  the IP address for each host, much like how the 'MACS' hash contains
  the MAC address for each host.  This is needed because ebtables (which
  is needed for ARP proxying) doesn't resolve hostnames.

Rules are stored in firewall/iptables-fw-rules.  Syntax is similar to
fw-rules, but without the rule number (since iptables doesn't use rule
numbers).  These should be equivalent to our ipfw-based rules, but I
haven't tested every case yet to confirm this.  I'm sure some changes
will be necessary.

--- a/firewall/GNUmakefile.in
+++ b/firewall/GNUmakefile.in
@@ -12,7 +12,8 @@ TBDB		= @TBDBNAME@
 MDOPTS		= --compact --skip-extended-insert --no-create-info --skip-set-charset
 
 FW_SCRIPTS	= initfwvars.pl
-FW_FILES	= open.sql closed.sql basic.sql elabinelab.sql
+FW_FILES	= open.sql closed.sql basic.sql elabinelab.sql iptables-open.sql iptables-closed.sql \
+		  iptables-basic.sql iptables-elabinelab.sql
 
 include $(OBJDIR)/Makeconf
 
@@ -23,6 +24,9 @@ include $(OBJDIR)/Makeconf
 all: $(FW_SCRIPTS) $(FW_FILES)
 
 include $(TESTBED_SRCDIR)/GNUmakerules
+
+iptables-%.sql: genconfig-iptables.pl
+	$(SRCDIR)/genconfig-iptables.pl -f $(SRCDIR)/iptables-fw-rules -M $* > $@
 
 %.sql: genconfig.pl
 	$(SRCDIR)/genconfig.pl -f $(SRCDIR)/fw-rules -M $* > $@
