--- a/configure.in
+++ b/configure.in
@@ -130,6 +130,7 @@ AC_SUBST(FS_WITH_QUOTAS)
 AC_SUBST(TRACK_INTERSWITCH_BANDWIDTH)
 AC_SUBST(TIMESTAMPS)
 AC_SUBST(OURTIMEZONE)
+AC_SUBST(NODECONSOLE)
 AC_SUBST(UNIFIED_BOSS_AND_OPS)
 AC_SUBST(DISABLE_NSE)
 AC_SUBST(DISABLE_NAMED_SETUP)
@@ -343,6 +344,7 @@ NEEDMROUTED=0
 OPSVM_ENABLE=0
 OPSVM_MOUNTPOINT="/ops"
 OURTIMEZONE="America/Denver"
+NODECONSOLE="sio"
 PORTAL_ENABLE=0
 PORTAL_ISPRIMARY=0
 
