--- a/configure.in
+++ b/configure.in
@@ -897,7 +897,7 @@ fi
 #
 # Check for protogeni rspec.
 #
-if test "$PROTOGENI_SUPPORT" = "1" && test $ELABINELAB = "0" && -e "$srcdir/.git"; then
+if test "$PROTOGENI_SUPPORT" = "1" -a $ELABINELAB = "0" -a -e "$srcdir/.git"; then
    if test ! -e "$srcdir/protogeni/rspec-geni/.git"; then
 	AC_MSG_WARN([protogeni/rspec-geni submodule not initialized yet]);
 	echo "Please cd into your source directory and run:"
