Integrate rc.tpmsetup.
This script will only do something in a Linux MFS which has trousers installed.

--- a/clientside/tmcc/common/config/rc.config
+++ b/clientside/tmcc/common/config/rc.config
@@ -1,7 +1,7 @@
 #!/usr/bin/perl -w
 #
 # EMULAB-COPYRIGHT
-# Copyright (c) 2004-2011 University of Utah and the Flux Group.
+# Copyright (c) 2004-2012 University of Utah and the Flux Group.
 # All rights reserved.
 #
 use English;
@@ -86,7 +86,8 @@ my %bootscript_args = ( 'rc.accounts' => $updatemasterpasswdfiles ?
 
 if (MFS()) {
     @bootscripts = ("rc.misc", "rc.localize", "rc.mounts", "rc.accounts", 
-		    "rc.hostnames", "rc.keys", "rc.tarfiles", "rc.rpms");
+		    "rc.hostnames", "rc.keys", "rc.tarfiles", "rc.rpms",
+		    "rc.tpmsetup");
 }
 elsif (FAKEJAILED()) {
     @bootscripts = ("rc.misc", "rc.keys", "rc.route", "rc.tunnels",
